@@ -6,7 +6,7 @@ AUX calculate-server-2.1.14-fix_add_dns_rec.patch 649 RMD160 dbe869d596486428d10
 AUX calculate-server-2.1.14-fix_dovecot.patch 502 RMD160 c7d4c76dc49a3894e7534572643e321696ae5a58 SHA1 1d62d3b5c9a5628cbb133bc615f8af06d6e844b5 SHA256 4f9ed8f74dd50244f1b6ac5f8a1b991a0f973fb2c05eac23e0509c2d31458baa
 AUX calculate-server-2.1.14-remote_distfiles.patch 892 RMD160 8d6a74fa561dcb35749f823103231890a93572f5 SHA1 b9aacc5e6fa755eb12fed2f4cb34d8a6c0765a01 SHA256 3f01a01874c38e81a86940255b55fa250a2c0f85726fdd6974b4b9e3ac1bdc34
 AUX calculate-server-2.1.14-rename_param.patch 1980 RMD160 2d5e449e1da1f9dc7f3c2ddf11125842309675c4 SHA1 75aab35370256629d82eca9347d5d1fc07706b2d SHA256 d09e00c52625b4320a753cc519250d396f92742181af2a6f7a95b060812cf99d
-AUX calculate-server-2.1.15-fix_proftpd.patch 971 RMD160 b700c569d093e1718e5da7549f27a095ea54ca5f SHA1 5c3604f7121d37bed72e7840d604c9f963cfb0bf SHA256 33a0bf2b688d8e332085839834ec87a4dbb2e3cf89c52cdd40e777951c1c6a76
+AUX calculate-server-2.1.15-fix_proftpd.patch 1028 RMD160 225573257cc27880ab2a3b44dd2915aaedac686f SHA1 a64037ff43a5d593e5b85660b15a98b86ee16808 SHA256 f38174665eb1b947f95a6eea304f6be702fef1b5507e6df04ba693bcfac5fbf3
 DIST calculate-server-2.1.13.tar.bz2 157717 RMD160 42d15a964a8c94774003d89ddc6bd834d20b1d5d SHA1 08e47e64aa8173b76a73693346d465ed62ac2ea1 SHA256 c748759f792c21dd28f2659bfeccf2a707c08f36a5d49766ceb6b922a98e930e
 DIST calculate-server-2.1.14.tar.bz2 167957 RMD160 a2d349f1cd6a6107f7e32b79b5189e5a0530b440 SHA1 3f23fb09fb7b67f14d48c8ffb3edc03e5eef95a9 SHA256 3c5b4de78df05c545884995d50fd5b8b53c6d9742d91e699d8fd1d9020168e05
 DIST calculate-server-2.1.15.tar.bz2 168350 RMD160 8b6723d9007f6ba73af0690ea8a49a3047ec6eff SHA1 ebda1375fd7dc95e4f4404f99d30f50d5788aa4e SHA256 3bc8f28dc3c583d1ec51d9653fc92d047c0f2064f3745a34195ba133cfc66d8c
@@ -22,7 +22,7 @@ EBUILD calculate-server-2.1.14-r5.ebuild 5468 RMD160 16579e73a24efa9d175beeccdca
 EBUILD calculate-server-2.1.14-r6.ebuild 5589 RMD160 dcb93ec7edc9f02e2b64ea93367f031c48e34744 SHA1 a8e2de5e67bc267f89c5c8cf790ffc6cb8f4045c SHA256 465564fac36634ec7741b5dc417bc2df56c0e4d3474d37006ce3c938d68d16e6
 EBUILD calculate-server-2.1.14.ebuild 4966 RMD160 0a71a8217e53bec9c87669713e3007a5097e9b19 SHA1 6c284957f2841655facc4301cc7a9945d5f95876 SHA256 a7d071a4a1b10e1a03ebec2509be004ddcad0831976a05e88aa2ebbbee4fa986
 EBUILD calculate-server-2.1.15-r1.ebuild 5297 RMD160 3c2e0ef3aa437dd622751b77ee54de386688f59d SHA1 f3992918608d04aad76ce96fa4f984f4fa321394 SHA256 3c580af7a0259bf15ad59ec97d34f6affc6ffc3258439e8d8c49eeb730104c98
-EBUILD calculate-server-2.1.15-r3.ebuild 5425 RMD160 ca258dad95400b26d37cb526ce55bd8ddf55b071 SHA1 5c66d2fc8420b7ea45feed339ea5a1a0312c640a SHA256 7ab65757f9f6c19d943b95cf11e0b60cd08e58c2cde04cfb1f39688de63e1778
+EBUILD calculate-server-2.1.15-r4.ebuild 5425 RMD160 ca258dad95400b26d37cb526ce55bd8ddf55b071 SHA1 5c66d2fc8420b7ea45feed339ea5a1a0312c640a SHA256 7ab65757f9f6c19d943b95cf11e0b60cd08e58c2cde04cfb1f39688de63e1778
 EBUILD calculate-server-9999.ebuild 1037 RMD160 e064aafa6280bde8c3eee916ff18c53ec15155b9 SHA1 8e12835d6c5ddcfee9abb20f2c7608a58338270d SHA256 9990fc856334757de45a58372b6b2d0e727e621697cd90abec72bc3388907914
-MISC ChangeLog 8537 RMD160 8a124da9b28ad622f29ba85a6b4c05010ce2d160 SHA1 f2ad0f3092267e294d4348180ab9a4c50a58b09d SHA256 087c6aa62c268ce0e3f95c2e2ea1fb74e2ef360418fd7af9784d333ad6abb0de
+MISC ChangeLog 8789 RMD160 a43c183b62b01668f738afeefa6bc30a9d2f7c7c SHA1 5b7a05dd2c612a98b5b336a47e9a509d1aa4ea40 SHA256 e7be850a78dd947309d832070f76b141bbd57a2ba96d679f8754b9f596a6509f
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
