@@ -1,11 +1,11 @@
-commit b36881f7b430342d8578f5aaaed442fa19949983
+commit 2ae7a6694734a9cccf3abbb4c53338ae440bbe1b
 Author: Mike Hiretsky <mh@calculate.ru>
 Date:   Tue Dec 13 10:19:17 2011 +0400
 
     Fix proftpd.conf
 
 diff --git a/profile/ftp/etc/proftpd/proftpd.conf b/profile/ftp/etc/proftpd/proftpd.conf
-index bbf59dc..3a477b6 100644
+index bbf59dc..dca4e0b 100644
 --- a/profile/ftp/etc/proftpd/proftpd.conf
 +++ b/profile/ftp/etc/proftpd/proftpd.conf
 @@ -69,9 +69,20 @@ DefaultRoot #-sr_ftp_path-#
@@ -16,15 +16,15 @@ index bbf59dc..3a477b6 100644
  LDAPDNInfo            "#-ld_ftp_dn-#" #-ld_ftp_pw-#
  LDAPAuthBinds         on
  LDAPDoAuth            on "uid=%v,ou=Users,#-ld_ftp_dn-#"
-+!LDAPBindDN
-+!LDAPUsers
++!LDAPBindDN           del
++!LDAPUsers            del
 +#pkg#
 +#?pkg(net-ftp/proftpd)>=1.3.4#
 +LDAPBindDN            "#-ld_ftp_dn-#" #-ld_ftp_pw-#
 +LDAPAuthBinds         on
 +LDAPUsers             "uid=%v,ou=Users,#-ld_ftp_dn-#" (uid=%v)
-+!LDAPDNInfo
-+!LDAPDoAuth
++!LDAPDNInfo           del
++!LDAPDoAuth           del
 +#pkg#
  LDAPDefaultAuthScheme SSHA
  LDAPGenerateHomedir off
