@@ -30,7 +30,8 @@ EBUILD calculate-utilities-2.2.26-r9.ebuild 879 RMD160 cbd90bc7a4c775bf6e235e38a
 EBUILD calculate-utilities-2.2.26.ebuild 858 RMD160 689a2c02fbba4a04bc6103d21e1c28eea9c1b084 SHA1 ec3fdd0e02e7e24bf06286997cb41fdf861c034f SHA256 3e72263a6417c5bd713b5329d48fb0e2a26782a249c975ffc2bc3ddb1558e860
 EBUILD calculate-utilities-2.2.27-r1.ebuild 861 RMD160 70075e64c09a6ef6826aca6a87386ec40b1c4b31 SHA1 d181ca185f1fc8498eaf7043832d1d4cf32479ae SHA256 d70fe0cdac200fb91fd1092d55158f3e87584fa8c93c968fb2214be3999b3747
 EBUILD calculate-utilities-2.2.27-r2.ebuild 873 RMD160 af0dcf66a461c4a8d3fa6337dda6da7029c4595b SHA1 792e84594789233d5a6a0436536b4a74f37d634e SHA256 6911e0844850944c775a1000e2ecb6f68867e82d8888fe974b638db26521d006
+EBUILD calculate-utilities-2.2.27-r3.ebuild 873 RMD160 8628d675e4ba74655b5bf659d2174ea841a98546 SHA1 f1ee774dc3f3bf2d236ef9dabc238b158bea0fa4 SHA256 4f6f60097dec896b2d37be3351f5c8506bcfd8c59a9a8ba86ce3ebc30faba6ef
 EBUILD calculate-utilities-2.2.27.ebuild 861 RMD160 d840018012b50f856de0042966facf8ee93007b9 SHA1 3f805525a322977dcb6cc442dcd933c90855c175 SHA256 1a2a97e4dde488e880820a5a97ff974ae3dd068c2d894a9b962c35d24dad4eec
 EBUILD calculate-utilities-2.2.9999.ebuild 842 RMD160 f2c0fdc1068614b71a37f2226dcde4883ebd2876 SHA1 99f673a52934f552589baf6d12ed9bffc03b8ebd SHA256 56d97b7d2ce11d23b25d9036b4e2ee196b547ce1d11b0cc349a8205515b66bf1
 EBUILD calculate-utilities-3.0.9999.ebuild 441 RMD160 ec17f871ec70a322cff866048e50c150931e0e95 SHA1 d0e036ba01e6a71ad14e6f3e6735bbd0f325df99 SHA256 30c6cd4ce478016cb75458314ea4e745ccb1501be33f14c3a2593d9d0e670c9c
-MISC ChangeLog 36402 RMD160 5faedd0b37bae2718875c3b777fe8a67b0f404ca SHA1 f03a20cd0fe4963fcc4472ec8babc6c796a94589 SHA256 6ba42d828d2cdf15b62e7b828381cd55583364fc9643cd504a56658dc8ebc9e9
+MISC ChangeLog 36570 RMD160 0eeed4508b3c813a1a94aafc908a0da5821cb1c9 SHA1 f87b769ac11569b26a1f6012ce9309d9f662a535 SHA256 b989a40ed8922d5c32a16adf8f2c4fed15804c462300ffcb386b0c622b6ed28a
