@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.27-r3 (15 Dec 2011)
+
+  15 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.27-r3.ebuild:
+  Update for server
+
 *calculate-utilities-2.2.27-r2 (14 Dec 2011)
 
   14 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
