@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.15-r4 (15 Dec 2011)
+
+  15 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-server-2.1.15-r3.ebuild, +calculate-server-2.1.15-r4.ebuild,
+  files/calculate-server-2.1.15-fix_proftpd.patch:
+  Update server script
+
 *calculate-server-2.1.15-r3 (13 Dec 2011)
 
   13 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
